[package]
name = "rGradle"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "3.0"
glob = "0.3"
clap = { version = "4.4", features = ["derive"] }
semver = "1.0"
thiserror = "2.0"
indicatif = "0.17"
rayon = "1.10"
tokio = { version = "1.45", features = ["full"] }
async-std = "1.13"
walkdir = "2.4"
quick-xml = "0.31"
futures = "0.3.31"
tokio-stream = "0.1.17"
num_cpus = "1.16.0"
